[package]
name = "golf"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", features = ["wayland", "dynamic_linking"] }
avian2d = { git = "https://github.com/Jondolf/avian", branch = "main", default-features = false, features = [
    "2d",
    "f32",
    "parry-f32",
    "debug-plugin",
    "enhanced-determinism",
    "parallel",
] }
bevy-inspector-egui = { version = "0.26" }
earcutr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
