[package]
name = "golf"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15", features = ["wayland", "dynamic_linking"] }
avian2d = { version = "0.2", default-features = false, features = [
    "2d",
    "f32",
    "parry-f32",
    "debug-plugin",
    "enhanced-determinism",
    "parallel",
] }
bevy-inspector-egui = { version = "0.29" }
earcutr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1

[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimise for size (try "z" or "s" sometimes)
opt-level = "z"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
